@@ -1,5 +1,10 @@
 2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/main.cc (main, main_prog): Bugfix: move exit-upon-files
+	back, until after evaluating init_scheme_code.
+
+	* scm/translator-property-description.scm (breakAlignOrder): Doco fix.
+
 	* Documentation/user/lilypond-book.itely: Remove @cindex
 	without argument.
 
